fix(bs-44): revert banner's gear image on mobile layout

--- a/src/pages/PageStake/components/Banner/Banner.module.scss
+++ b/src/pages/PageStake/components/Banner/Banner.module.scss
@@ -9,8 +9,6 @@
 }
 
 .bannerLogicContainer {
-  max-width: initial;
-
   & > *:not(:last-child) {
     margin-bottom: 24px;
   }
@@ -54,6 +52,10 @@
 }
 
 @include b(mobile) {
+  .container {
+    flex-direction: column;
+  }
+
   .h1 {
     font-size: 48px;
   }
